# agentic

./: .gitignore  CLAUDE.md  Cargo.toml  MANUAL.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spec.md  todo.md
.github/workflows/: agentic-node.yml  test.yml
apps/vscode-extension/: .gitignore  .vscode-test.mjs  package.json  tsconfig.json
apps/web-ui/: .gitignore  (+6 more)
crates/agentic-cli/: Cargo.toml
crates/agentic-cli/src/: args.rs  doctor.rs  init.rs  lib.rs  main.rs  ticket_run.rs
crates/agentic-cli/tests/: cli_args.rs  cli_smoke.rs  cli_ticket.rs  doctor.rs  e2e_copilot_live.rs  e2e_permissions_live.rs  execute_pipeline_file_changes.rs  findings_projection.rs  init.rs
crates/agentic-core/: Cargo.toml
crates/agentic-core/src/: error.rs  lib.rs  logging.rs  paths.rs  time.rs  workspace.rs
crates/agentic-core/src/agents/: discovery.rs  list.rs  mod.rs
crates/agentic-core/src/auth/: device_code.rs  gh_delegate.rs  loopback.rs  mod.rs  oauth_github.rs  oauth_gitlab.rs  pkce.rs  refresh.rs  secrets.rs
crates/agentic-core/src/backends/: file_snapshots.rs  mod.rs  scripted.rs  subprocess.rs
crates/agentic-core/src/backends/claude_code/: mod.rs  parser.rs  pricing.rs  runner.rs
crates/agentic-core/src/backends/copilot_cli/: mod.rs  models.rs  parser.rs  runner.rs
crates/agentic-core/src/db/: auth.rs  chat.rs  findings.rs  mod.rs  pipeline_presets.rs  runs.rs  status.rs  steps.rs  workspaces.rs
crates/agentic-core/src/db/migrations/: 0001_workspaces.sql  0002_runs_and_steps.sql  0003_artifacts.sql  0004_stream_events.sql  0005_chat.sql  0006_auth_and_settings.sql  0007_findings_triage_check.sql  0008_findings_composite_pk.sql  0009_drop_oauth_columns.sql  0010_pipeline_presets.sql  mod.rs
crates/agentic-core/src/events/: bus.rs  history.rs  mod.rs  persist.rs
crates/agentic-core/src/findings/: extractor.rs  mod.rs
crates/agentic-core/src/permissions/: config.rs  gate.rs  gate_async.rs  matcher.rs  mod.rs  risk.rs  session.rs
crates/agentic-core/src/pipeline/: config.rs  mod.rs  orchestrator.rs  sm.rs  tool_use_observer.rs
crates/agentic-core/src/settings/: mod.rs
crates/agentic-core/src/ticket_sources/: cli.rs  free_text.rs  github.rs  gitlab.rs  http.rs  jira.rs  mod.rs
crates/agentic-core/tests/: agents_discovery.rs  agents_list.rs  agents_parse.rs  auth_repo.rs  backend_kind.rs  backend_trait.rs  backends_scripted.rs  chat_repo.rs  claude_backend_e2e.rs  claude_parser.rs  claude_subprocess.rs  copilot_backend_e2e.rs  copilot_fixtures_exist.rs  copilot_models.rs  copilot_parser.rs  copilot_subprocess.rs  db_open.rs  device_code.rs  e2e_scripted.rs  error.rs  event_bus.rs  event_history.rs  event_persister.rs  events_serde.rs  file_snapshots.rs  findings_extractor.rs  findings_repo.rs  gh_delegate.rs  jira_auth_smoke.rs  logging.rs  logging_panic.rs  logging_traced.rs  loopback.rs  migrations.rs  orchestrator.rs  orchestrator_permissions.rs  paths.rs  persister_stress.rs  pipeline_dynamic.rs  pipeline_end_to_end.rs  (+22 more)
crates/agentic-core/tests/common/: mod.rs
crates/agentic-core/tests/fixtures/agents/: architect.md  missing_name.md  name_mismatch.md  qa.md  with_extras.md
crates/agentic-core/tests/fixtures/claude/: assistant_text.jsonl  assistant_with_tool_use.jsonl  authentication_error.jsonl  bad_json.jsonl  hooks_noise.jsonl  message_delta_usage.jsonl  message_start.jsonl  rate_limit.jsonl  rate_limit_error.jsonl  session_init.jsonl  text_delta.jsonl  tool_use.jsonl  tool_use_roundtrip.jsonl  upstream_error.jsonl  user_text_with_tool_result.jsonl
crates/agentic-core/tests/fixtures/copilot/: bad_json.jsonl  hello_simple.jsonl  tool_use_bash.jsonl
crates/agentic-core/tests/fixtures/events/: run_started.json
crates/agentic-node/: .gitignore  Cargo.toml  lib.js  package.json
crates/agentic-node/__tests__/: smoke.test.ts
crates/agentic-node/fixtures/: smoke.json
crates/agentic-node/src/: lib.rs
crates/agentic-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/agentic-tauri/capabilities/: default.json
crates/agentic-tauri/frontend/: index.html
crates/agentic-tauri/permissions/autogenerated/: chat_list_messages.toml  chat_send_message.toml  connect_github.toml  connect_github_via_gh.toml  delete_auth_account.toml  delete_pipeline_preset.toml  fetch_jira_ticket.toml  get_event_history.toml  get_workspace_id.toml  list_auth_accounts.toml  list_findings.toml  list_pipeline_presets.toml  mention_agent.toml  permission_decide.toml  save_pipeline_preset.toml  start_scripted_run.toml  start_ticket_run.toml  subscribe_events.toml  triage_finding.toml  update_pipeline_preset.toml
crates/agentic-tauri/scripted-runs/: demo.json  failure-rate-limit.json  happy-path.json  mixed-findings.json
crates/agentic-tauri/src/: main.rs
crates/agentic-tauri/src/commands/: agents.rs  auth.rs  chat.rs  events.rs  findings.rs  jira.rs  mention.rs  mod.rs  permissions.rs  pipeline_presets.rs  runs.rs  scripted.rs  ticket.rs  workspace.rs
crates/agentic-tauri/tests/: auth_ipc.rs  chat_ipc.rs  event_history_ipc.rs  findings_ipc.rs  list_agents_ipc.rs  mention_ipc.rs  pipeline_presets_ipc.rs  pre_flight.rs  runs_ipc.rs  scripted_run.rs  tauri_ipc.rs  ticket_ipc.rs  workspace_ipc.rs
crates/agentic-tui/: Cargo.toml
crates/agentic-tui/src/: app.rs  findings.rs  layout.rs  lib.rs  main.rs  modes.rs  run.rs  theme.rs
crates/agentic-tui/src/views/: chat.rs  chat_pane.rs  cockpit.rs  diff.rs  findings.rs  help_overlay.rs  issue_header.rs  issue_pane.rs  logs_pane.rs  mod.rs  perm_card.rs  pipeline_bar.rs  status_line.rs  tab_bar.rs  title_bar.rs
crates/agentic-tui/tests/: chat_pane.rs  cockpit.rs  command_mode.rs  diff.rs  draw_app_layout.rs  file_change_lookup.rs  finding_as_warn.rs  findings.rs  help_overlay.rs  insert_mode.rs  issue_header.rs  issue_pane.rs  layout.rs  logs_pane.rs  pane_switch_keys.rs  perm_card.rs  perm_card_egress.rs  perm_envelope_apply.rs  perm_keys.rs  pipeline_bar.rs  status_line.rs  tab_bar.rs  theme_constants.rs  title_bar.rs  tui_smoke.rs
crates/agentic-tui/tests/common/: mod.rs
docs/: SMOKE.md  copilot-schema.md
(+171 files in other folders)
