[workspace]
resolver = "3"
members = [
    "crates/agentic-meta-tests",
    "crates/agentic-core",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

# Shared workspace dependencies will be declared here as the project grows.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
serde_yaml = "0.9"
directories = "6"
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"
blake3 = "1"
toml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
