[workspace]
resolver = "3"
members = [
    "crates/agentic-meta-tests",
    "crates/agentic-core",
    "crates/agentic-cli",
    "crates/agentic-tauri",
    "crates/agentic-tui",
    "crates/agentic-node",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

# Shared workspace dependencies will be declared here as the project grows.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
serde_yml = "0.0.12"
directories = "6"
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"
blake3 = "1"
toml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "process", "time", "net", "fs"] }
rmp-serde = "1"
proptest = "1"
async-trait = "0.1"
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
which = "8"
similar = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
wiremock = "0.6"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
nix = { version = "0.30", default-features = false, features = ["signal"] }
axum = "0.7"
webbrowser = "1"
url = "2"
ratatui = "0.29"
crossterm = "0.28"
zeroize = { version = "1", features = ["derive"] }
glob = "0.3"
