[package]
name = "agentic-cli"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "agentic-cli"
path = "src/main.rs"

[dependencies]
agentic-core = { path = "../agentic-core" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
