[package]
name = "agentic-cli"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "agentic-cli"
path = "src/main.rs"

[dependencies]
agentic-core = { path = "../agentic-core" }
anyhow = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
which = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
