[package]
name = "agentic-core"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
blake3 = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
tracing-test = "0.2"
serial_test = "3"
tempfile = "3"
