[package]
name = "agentic-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = ["testing"]
testing = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
blake3 = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
rmp-serde = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
similar = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
keyring = { workspace = true }
axum = { workspace = true }
zeroize = { workspace = true }
glob = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
serial_test = "3"
tempfile = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
zeroize = { workspace = true }
