[package]
name = "agentic-tauri"
version = "0.1.0"
edition.workspace = true

[lib]
name = "agentic_tauri"
path = "src/lib.rs"

[[bin]]
name = "agentic-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
agentic-core = { path = "../agentic-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1"

[features]
# Required by Tauri 2.x for production builds
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
