[package]
name = "agentic-tauri"
version = "0.1.0"
edition.workspace = true

[lib]
name = "agentic_tauri"
path = "src/lib.rs"

[[bin]]
name = "agentic-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
agentic-core = { path = "../agentic-core" }
agentic-cli = { path = "../agentic-cli" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { workspace = true }
serde_json = "1"
tempfile = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true }
temp-env = "0.3"

[features]
# Required by Tauri 2.x for production builds
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
