[package]
name = "agentic-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "agentic-tui"
path = "src/main.rs"

[lib]
name = "agentic_tui"
path = "src/lib.rs"

[dependencies]
agentic-core = { path = "../agentic-core" }
crossterm = { workspace = true }
ratatui = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
ratatui = { workspace = true, features = ["all-widgets"] }
rusqlite = { workspace = true }
tokio = { workspace = true }
